# ml_world_cup_predicitor

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: decision_tree_build.ipynb  elo_creation.ipynb  exploraion.ipynb  feature-engineering.ipynb  feature_analysis.ipynb  international_match_data.ipynb
src/ml_world_cup_predictor/: config.py  data_loading.py  data_transformation.py  elo.py  elo_creation.py  evaluate.py  feature_engineering.py  features.py  form.py  head_to_head.py  load.py  logging.py  match_filtering.py  model.py  transform.py  utils.py
