[project]
name = "ml-world-cup-predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.3.0",
    "kagglehub>=1.0.2",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "pydantic>=2.13.4",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ml_world_cup_predictor"]
